--- a/locale/fr_CA/installer.xml
+++ b/locale/fr_CA/installer.xml
@@ -69,4 +69,6 @@
 	<message key="installer.releaseNotes">Instructions d'utilisation</message>
 	<message key="installer.securitySettings">Paramètres de sécurité</message>
 	<message key="installer.skipFilesDir">Ne pas créer de sous-répertoires</message>
+	<message key="installer.installParseEmailTemplatesFileError"><![CDATA[Une erreur s'est produite lors de l'analyse du fichier du modèle de courriel <tt>{$file}</tt>.]]></message>
+	<message key="installer.locale.maybeIncomplete">Les langues sélectionnées peuvent être incomplètes.</message>
 </locale>
