--- a/locale/pt_BR/reader.xml
+++ b/locale/pt_BR/reader.xml
@@ -18,18 +18,18 @@
 	<message key="comments.body">Corpo</message>
 	<message key="comments.confirmDeleteChildren">Excluir este comentário também excluirá todas as respostas. Deseja realmente excluir o comentário?</message>
 	<message key="comments.delete">Excluir este comentário</message>
-	<message key="comments.email">E-mail do Comentarista</message>
-	<message key="comments.emailReply">Responder E-mail</message>
-	<message key="comments.enterComment">Incluir Comentário</message>
+	<message key="comments.email">E-mail do comentarista</message>
+	<message key="comments.emailReply">Responder e-mail</message>
+	<message key="comments.enterComment">Incluir comentário</message>
 	<message key="comments.inResponseTo"><![CDATA[Em resposta a <a href="{$url}">{$title}</a>]]></message>
-	<message key="comments.name">Nome do Comentarista</message>
+	<message key="comments.name">Nome do comentarista</message>
 	<message key="comments.noComments">Nenhum comentário publicado.</message>
 	<message key="comments.nReplies">({$num} Respostas)</message>
 	<message key="comments.oneReply">(1 Resposta)</message>
 	<message key="comments.postAnonymously">Publicar este comentário anonimamente</message>
 	<message key="comments.postReply">Publicar Resposta</message>
 	<message key="comments.readerComments">Comentários do Leitor</message>
-	<message key="comments.readMore">Ler mais...</message>
+	<message key="comments.readMore">Ler mais</message>
 	<message key="comments.replies">Respostas</message>
 	<message key="comments.title">Título</message>
 	<message key="comments.viewAllComments">Visualizar todos os comentários</message>
@@ -40,42 +40,42 @@
 	<message key="rt.admin.contexts.createContext">Criar Contexto</message>
 	<message key="rt.admin.contexts.edit.editContext">Editar Contexto</message>
 	<message key="rt.admin.contexts.metadata">Metadados</message>
-	<message key="rt.admin.contexts.options.authorTerms">Nome do autor como termo de pesquisa padrão permite aos leitores encontrar outros trabalhos pelo autor do documento(Ex.: para um contexto de "Outros Trabalhos")</message>
+	<message key="rt.admin.contexts.options.authorTerms">Nome do autor como termo de pesquisa padrão permite aos leitores encontrar outros trabalhos do autor(Ex.: para um contexto de "Outros Trabalhos")</message>
 	<message key="rt.admin.contexts.options.citedBy">Use os nomes do autor como termos de pesquisa padrão e descreva o contexto como busca de citações para o artigo.</message>
-	<message key="rt.admin.contexts.options.defineTerms"><![CDATA[Utilizar a palavra selecionada pelo leitor como termo padrão de pesquisa ou deixar em branco caso não houver seleção (Ex.: para contextos "Definir Palavra"). A opção "Definir Palavra" deve estar habilitada nas <a href="{$settingsUrl}">Configurações da Ferramentas de Leitura</a> para permitir clique duplo em palavras do texto exibido para abrir este contexto.]]></message>
-	<message key="rt.admin.contexts.options.geoTerms">Utilizar dados de indexação geográfica como termos de busca padrão.</message>
+	<message key="rt.admin.contexts.options.defineTerms"><![CDATA[Utilizar a palavra selecionada pelo leitor como termo padrão de pesquisa ou deixar em branco caso não houver seleção (Ex.: para contextos "Definição da Palavra"). A opção "Definição da Palavra" deve estar habilitada nas <a href="{$settingsUrl}">Configurações da Ferramenta de Leitura</a> para permitir clique duplo em palavras do texto exibido para abrir este contexto.]]></message>
+	<message key="rt.admin.contexts.options.geoTerms">Usar dados de indexação geográfica como termos de pesquisa padrão.</message>
 	<message key="rt.admin.contexts.options">Opções</message>
 	<message key="rt.admin.management">Administração</message>
-	<message key="rt.admin.readingToolsEnabled">Ferramentas de Leitura</message>
+	<message key="rt.admin.readingToolsEnabled">Ferramenta  de Leitura</message>
 	<message key="rt.admin.searches.confirmDelete">Deseja realmente excluir esta Pesquisa?</message>
 	<message key="rt.admin.searches.createSearch">Criar Pesquisa</message>
 	<message key="rt.admin.searches.edit.editSearch">Editar Pesquisa</message>
 	<message key="rt.admin.selectedVersion">Itens Relacionados</message>
 	<message key="rt.admin.settings.abstract">Resumo (apresenta o resumo do item).</message>
-	<message key="rt.admin.settings.authorBio">Biografia do Autor(Exibe a biografia do autor alimentada no sistema)</message>
+	<message key="rt.admin.settings.authorBio">Biografia do Autor (Exibe a biografia do autor alimentada no sistema)</message>
 	<message key="rt.admin.settings.captureCite">Como citar este documento (Exibe detalhes bibliográficos do documento).</message>
-	<message key="rt.admin.settings.defineTerms">Definir palavra (Permite leitores clicar duas vezes em um palavra para pesquisa em dicionários)</message>
+	<message key="rt.admin.settings.defineTerms">Definição de palavra (Permite leitores clicar duas vezes em um palavra para pesquisa em dicionários)</message>
 	<message key="rt.admin.settings.disableRelatedItems">Desabilitar Itens Relacionados</message>
-	<message key="rt.admin.settings.emailAuthor">E-mail ao autor (Abre uma opção para comunicação direta com o autor)</message>
-	<message key="rt.admin.settings.emailOthers">Enviar para outros (Abre uma opção para enviar o documento para outros leitores, com o título do documento no assunto da mensagem)</message>
+	<message key="rt.admin.settings.emailAuthor">E-mail ao autor (abre um formulário para comunicação direta com o autor)</message>
+	<message key="rt.admin.settings.emailOthers">Enviar para outros (abre um formulário para enviar o documento a outros leitores, com o título do documento no assunto da mensagem).</message>
 	<message key="rt.admin.settings.findingReferences">Pesquisar Referências</message>
-	<message key="rt.admin.settings.printerFriendly">Versão de impressão (Apresenta ao leitor uma versão para impressão)</message>
-	<message key="rt.admin.settings.supplementaryFiles">Exibir documentos suplementares (Exibe lista de todos os documentos suplementares incluídos pelo autor)</message>
+	<message key="rt.admin.settings.printerFriendly">Versão para impressão (apresenta ao leitor uma versão para impressão).</message>
+	<message key="rt.admin.settings.supplementaryFiles">Exibir documentos suplementares (exibe a lista de todos os documentos suplementares incluídos pelo autor).</message>
 	<message key="rt.admin.settings.viewMetadata">Exibir metadados (Exibe a informação de indexação incluída pelo autor e pelo sistema)</message>
 	<message key="rt.admin.status">Situação</message>
 	<message key="rt.admin.validateUrls.complete">Validação concluída.</message>
 	<message key="rt.admin.validateUrls.ok">OK</message>
-	<message key="rt.admin.validateUrls.urlIsInvalid">{$url} inválida.</message>
+	<message key="rt.admin.validateUrls.urlIsInvalid">{$url} é inválida.</message>
 	<message key="rt.admin.validateUrls">Validar URLs</message>
 	<message key="rt.admin.validateUrls.validate">Validar</message>
 	<message key="rt.admin.versions.confirmDelete">Deseja realmente excluir esta Versão e todos os Contextos e Pesquisas associados?</message>
-	<message key="rt.admin.versions.confirmRestore">Deseja realmente restaurar para as versões padrão (ato irreversível)? Caso positivo, escolha uma Versão ativa em Configurações.</message>
+	<message key="rt.admin.versions.confirmRestore">Deseja realmente restaurar as versões padrão (ato irreversível)? Em caso positivo, escolha uma Versão ativa em Configurações.</message>
 	<message key="rt.admin.versions.createVersion">Criar Versão</message>
 	<message key="rt.admin.versions.edit.editVersion">Editar Versão</message>
 	<message key="rt.admin.versions.export">Exportar</message>
 	<message key="rt.admin.versions.importVersion">Importar Versão</message>
 	<message key="rt.admin.versions.metadata">Metadados</message>
-	<message key="rt.admin.versions.restoreVersions">Restaurar para Versões Padrão</message>
+	<message key="rt.admin.versions.restoreVersions">Restaurar Versões para o Padrão</message>
 	<message key="rt.authorBio">Exibir biografia do autor</message>
 	<message key="rt.captureCite.format">Formato de Citação</message>
 	<message key="rt.captureCite">Como citar este documento</message>
@@ -115,27 +115,27 @@
 	<message key="rt.metadata.dublinCore.subject">Assunto</message>
 	<message key="rt.metadata.dublinCore.title">Título</message>
 	<message key="rt.metadata.dublinCore.type">Tipo</message>
-	<message key="rt.metadata.forThisDocument">Metadados para este Documento</message>
+	<message key="rt.metadata.forThisDocument">Metadados deste Documento</message>
 	<message key="rt.metadata.pkp.abstract">Resumo</message>
 	<message key="rt.metadata.pkp.copyright">Direito Autoral e Permissões</message>
-	<message key="rt.metadata.pkp.coverage">Localização geográfica, cronológica, amostra(gênero, idade, etc.)</message>
+	<message key="rt.metadata.pkp.coverage">Localização geográfica, cronológica, amostra (gênero, idade, etc.)</message>
 	<message key="rt.metadata.pkp.date">(YYYY-MM-DD)</message>
 	<message key="rt.metadata.pkp.discipline">Área(s) do Conhecimento</message>
 	<message key="rt.metadata.pkp.format">Formato do Documento</message>
 	<message key="rt.metadata.pkp.genre"><![CDATA[Situação & gênero]]></message>
-	<message key="rt.metadata.pkpItem">Itens de Metadados do PKP</message>
+	<message key="rt.metadata.pkpItem">Metadados para o PKP</message>
 	<message key="rt.metadata.pkp.language">Português=pt</message>
 	<message key="rt.metadata.pkp.publisher">Editora, localização</message>
 	<message key="rt.metadata.pkp.source">Título da Revista/conferência; V., No. (ano)</message>
 	<message key="rt.metadata.pkp.sponsors">Patrocínio</message>
 	<message key="rt.metadata.pkp.subjectClass">Classificação de Assunto</message>
-	<message key="rt.metadata.pkp.subject">Assunto(s)</message>
+	<message key="rt.metadata.pkp.subject">Palavras-chave(s)</message>
 	<message key="rt.metadata.pkp.suppFiles">Docs. Sups.</message>
 	<message key="rt.metadata.pkp.title">Título do documento</message>
 	<message key="rt.metadata.pkp.type">Tipo</message>
 	<message key="rt.metadata.pkp.uri">Identificador Universal Único (URI)</message>
 	<message key="rt.printVersion">Versão de Impressão</message>
-	<message key="rt.readingTools">Ferramentas de Leitura</message>
+	<message key="rt.readingTools">Ferramenta de Leitura</message>
 	<message key="rt.relatedItems">Itens relacionados</message>
 	<message key="rt.reviewPolicy">Política de Avaliação</message>
 	<message key="rt.search.description">Descrição</message>
@@ -157,4 +157,21 @@
 	<message key="rt.version.title">Título</message>
 	<message key="rt.version">Versão</message>
 	<message key="rt.viewMetadata">Exibir metadados</message>
+	<message key="comments.titleRequired">O título do comentário é obrigatório.</message>
+	<message key="rt.admin.sharing">Compartilhamento</message>
+	<message key="rt.admin.sharing.enabled">Compartilhamento habilitado</message>
+	<message key="rt.admin.sharing.description"><![CDATA[Para permitir aos leitores compartilhar artigos, cadastre-se no <a href="http://addthis.com">AddThis.com</a>, e copie/cole o código de Compartilhar a seguir.]]></message>
+	<message key="rt.admin.sharing.basic">Configurações Básicas</message>
+	<message key="rt.admin.sharing.userNameLabel">Usuário AddThis.com</message>
+	<message key="rt.admin.sharing.buttonStyleLabel">Estilo do botão</message>
+	<message key="rt.admin.sharing.dropDownMenuLabel">Usar menu drop-down</message>
+	<message key="rt.admin.sharing.advanced">Configurações Avançadas (opcional)</message>
+	<message key="rt.admin.sharing.customizationLink"><![CDATA[Leia a <a href="http://www.addthis.com/help/customize/custom-button/">Documentação de customização do AddThis.com</a> para referência.]]></message>
+	<message key="rt.admin.sharing.brandLabel">Marca</message>
+	<message key="rt.admin.sharing.dropDownLabel"><![CDATA[Opções do menu drop-down <br /> (lista separada por vírgula)]]></message>
+	<message key="rt.admin.sharing.languageLabel">Idioma</message>
+	<message key="rt.admin.sharing.logolabel">Logo</message>
+	<message key="rt.admin.sharing.logoBackgroundLabel">Fundo do logo</message>
+	<message key="rt.admin.sharing.logoColorLabel">Cor do logo</message>
+	<message key="rt.admin.configureSharing">Configurar AddThis</message>
 </locale>
