--- a/locale/de_DE/common.xml
+++ b/locale/de_DE/common.xml
@@ -297,7 +297,7 @@
 	<message key="notification.subscribeError">Ihre Mailadresse ist für die Benachrichtigungen bereits registriert.</message>
 	<message key="notification.reminderError">Das Zusenden des Passworts verursachte einen Fehler; stellen Sie bitte sicher, dass Sie die E-Mail-Adresse richtig eingegeben haben.</message>
 	<message key="notification.unsubscribe">Austragen</message>
-	<message key="notification.unsubscribeDescription">Geben Sie bitte Ihre E-Mail-Adresse und Ihr Passwort ein, um keine weiteren Mail-Benachrichtigungen zu erhalten. Wenn Sie sich nicht an Ihr Passwort erinnern, lassen Sie das Feld bitte frei; es wird dann ein neues Passwort an die angegebene Mail-Adresse geschickt.</message>
+	<message key="notification.unsubscribeDescription">Geben Sie bitte Ihre E-Mail-Adresse und Ihr Passwort ein, um keine weiteren E-Mail-Benachrichtigungen zu erhalten. Wenn Sie sich nicht an Ihr Passwort erinnern, lassen Sie das Feld bitte frei; es wird dann ein neues Passwort an die angegebene E-Mail-Adresse geschickt.</message>
 	<message key="notification.unsubscribeError">Beim Versuch, Sie auzutragen, ist ein Fehler aufgetreten. Bitte stellen Sie sicher, dass sie die richtige E-Mail-Adresse und das richtige Passwort verwenden.</message>
 	<message key="notification.unsubscribeSuccess">Sie wurden erfolgreich ausgetragen.</message>
 	<message key="common.manage">Verwalten</message>
