--- a/locale/fr_CA/reader.xml
+++ b/locale/fr_CA/reader.xml
@@ -157,4 +157,21 @@
 	<message key="rt.version.title">Titre</message>
 	<message key="rt.version">Version</message>
 	<message key="rt.viewMetadata">Indexer les métadonnées</message>
+	<message key="comments.titleRequired">Le titre du commentaire est obligatoire.</message>
+	<message key="rt.admin.sharing">Partage</message>
+	<message key="rt.admin.sharing.enabled">Partage activé</message>
+	<message key="rt.admin.sharing.description"><![CDATA[Pour permettre à vos lecteurs de partager des articles de revues, créer un compte avec <a href="http://addthis.com">addthis.com</a>, et copier/coller le code du bouton Partage ci-dessous.]]></message>
+	<message key="rt.admin.sharing.basic">Paramètres de base</message>
+	<message key="rt.admin.sharing.userNameLabel">nom d'utilisateur AddThis.com</message>
+	<message key="rt.admin.sharing.buttonStyleLabel">Style du bouton</message>
+	<message key="rt.admin.sharing.dropDownMenuLabel">Utiliser le menu déroulant</message>
+	<message key="rt.admin.sharing.advanced">Paramètres avancés (optionnel)</message>
+	<message key="rt.admin.sharing.customizationLink"><![CDATA[Voir la <a href="http://www.addthis.com/help/customize/custom-button/">documentation de personnalisation AddThis.com</a> pour référence.]]></message>
+	<message key="rt.admin.sharing.brandLabel">Marque</message>
+	<message key="rt.admin.sharing.dropDownLabel"><![CDATA[Options déroulantes <br /> (liste séparée par des virgules)]]></message>
+	<message key="rt.admin.sharing.languageLabel">Langue</message>
+	<message key="rt.admin.sharing.logolabel">Logo</message>
+	<message key="rt.admin.sharing.logoBackgroundLabel">Arrière-plan du logo</message>
+	<message key="rt.admin.sharing.logoColorLabel">Couleur du logo</message>
+	<message key="rt.admin.configureSharing">Configurer AddThis</message>
 </locale>
