--- a/locale/pt_BR/admin.xml
+++ b/locale/pt_BR/admin.xml
@@ -20,13 +20,13 @@
 	<message key="admin.authSources">Fontes de Autenticação</message>
 	<message key="admin.clearDataCache">Limpar Cache de Dados</message>
 	<message key="admin.clearTemplateCache">Limpar Cache de Template</message>
-	<message key="admin.configFileUpdatedInstructions"><![CDATA[O documento de configuração foi atualizado com sucesso. Caso as alterações incorram em erros no sistema será necessário atualizar  manualmente o arquivo <tt>config.inc.php</tt>.]]></message>
+	<message key="admin.configFileUpdatedInstructions"><![CDATA[O documento de configuração foi atualizado com sucesso. Caso as alterações incorram em erros no sistema será necessário atualizar manualmente o arquivo <tt>config.inc.php</tt>.]]></message>
 	<message key="admin.confirmClearTemplateCache">Deseja realmente limpar o Cache das templates compiladas?</message>
-	<message key="admin.confirmExpireSessions">Deseja realmente expirar todas as sessões de todos os usuários? Todos os usuário conectados serão forçados a acessar novamente (incluindo o usuário corrente).</message>
-	<message key="admin.contentsOfConfigFile">Conteúdo do documento de configuração</message>
+	<message key="admin.confirmExpireSessions">Deseja realmente expirar todas as sessões de todos os usuários? Todos os usuário conectados serão forçados a acessar novamente o sistema (incluindo o usuário atual).</message>
+	<message key="admin.contentsOfConfigFile">Conteúdo do arquivo de configuração</message>
 	<message key="admin.currentVersion">Versão Atual</message>
 	<message key="admin.dateInstalled">Data de instalação</message>
-	<message key="admin.displayConfigFileInstructions"><![CDATA[O conteúdo do documento atualizado vem a seguir. Para aplicar as alterações é necessário editar o documento <tt>config.inc.php</tt> manualmente em algum editor de texto, substituindo-o com o conteúdo do campo a seguir.]]></message>
+	<message key="admin.displayConfigFileInstructions"><![CDATA[As configurações atualizadas são exibidas abaixo. Para aplicar as alterações é necessário editar o documento <tt>config.inc.php</tt> manualmente em algum editor de texto, substituindo-o com o conteúdo do campo a seguir.]]></message>
 	<message key="admin.displayNewSystemConfig">Exibir Configuração Atual</message>
 	<message key="admin.expireSessions">Expirar Sessões de Usuários</message>
 	<message key="admin.languages.confirmReload">Deseja realmente recarregar este idioma? A execução irá apagar qualquer informação de idioma específico como customização de e-mails.</message>
@@ -38,24 +38,24 @@
 	<message key="admin.languages.noLocalesAvailable">Nenhum idioma adicional disponível para instalação.</message>
 	<message key="admin.languages.reload">Recarregar Idioma</message>
 	<message key="admin.languages.uninstall">Desinstalar Idioma</message>
-	<message key="admin.phpInfo">Informações Completas do PHP</message>
+	<message key="admin.phpInfo">Informações do PHP</message>
 	<message key="admin.saveSystemConfig">Salvar Configuração</message>
 	<message key="admin.server.apacheVersion">Versão do Apache</message>
 	<message key="admin.server.dbDriver">Driver da Base de Dados</message>
 	<message key="admin.server.dbVersion">Versão do Servidor de Base de Dados</message>
-	<message key="admin.serverInformationDescription"><![CDATA[Versão de software do Sistema Operacional Base e Servidor. Clique em <span class="highlight">Informações Completas do PHP</span> para ver detalhes das configurações do PHP deste servidor.]]></message>
+	<message key="admin.serverInformationDescription"><![CDATA[Versão de software do Sistema Operacional Básico e do Servidor. Clique em <span class="highlight">Informações do PHP</span> para ver detalhes das suas configurações neste servidor.]]></message>
 	<message key="admin.serverInformation">Informações do Servidor</message>
 	<message key="admin.server.phpVersion">Versão do PHP</message>
 	<message key="admin.server.platform">Sistema Operacional</message>
 	<message key="admin.settings.aboutDescription">Descrição sobre o Portal</message>
 	<message key="admin.settings.contactEmail">E-mail do Contato Prinicipal</message>
-	<message key="admin.settings.contactName">Nome do Contato Prinicipal</message>
+	<message key="admin.settings.contactName">Nome do Contato Principal</message>
 	<message key="admin.settings.form.contactEmailRequired">E-mail do contato principal é obrigatório</message>
 	<message key="admin.settings.form.contactNameRequired">Nome do contato principal é obrigatório</message>
 	<message key="admin.settings.form.minPasswordLengthRequired">A senha deve possuir no mínimo 4 caracteres.</message>
 	<message key="admin.settings.form.titleRequired">Título obrigatório.</message>
 	<message key="admin.settings.homeHeaderImage.altText">Logo do portal</message>
-	<message key="admin.settings.homeHeaderImageInvalid">Formato de imagem inválido. Formatos aceitáveis são .gif, .jpg, ou .png.</message>
+	<message key="admin.settings.homeHeaderImageInvalid">Formato de imagem inválido. Formatos aceitáveis são .gif, .jpg ou .png.</message>
 	<message key="admin.settings.introduction">Introdução</message>
 	<message key="admin.settings.minPasswordLength">Tamanho mínimo de senha</message>
 	<message key="admin.settings.oaiRegistration">Cadastrar Portal para Indexação (Coleta de Metadados)</message>
@@ -67,12 +67,12 @@
 	<message key="admin.siteAdmin">Administração do Portal</message>
 	<message key="admin.siteManagement">Administração da Revista</message>
 	<message key="admin.siteSettings">Configurações do Portal</message>
-	<message key="admin.systemConfigFileReadError"><![CDATA[O documento de configuração <tt>config.inc.php</tt> não existe ou está corrompido.]]></message>
+	<message key="admin.systemConfigFileReadError"><![CDATA[O documento de configuração <tt>config.inc.php</tt> não existe, não possui permissão de leitura ou está corrompido.]]></message>
 	<message key="admin.systemInformation">Informações sobre o Sistema</message>
 	<message key="admin.versionBuild">Construção</message>
 	<message key="admin.version.checkForUpdates">Buscar atualizações</message>
 	<message key="admin.version.downloadPackage">Baixar</message>
-	<message key="admin.version.downloadPatch">Baixar Correção</message>
+	<message key="admin.version.downloadPatch">Baixar Atualização</message>
 	<message key="admin.versionHistory">Histórico de Versões</message>
 	<message key="admin.version.latest">Última versão</message>
 	<message key="admin.versionMajor">Maior</message>
