--- a/locale/pt_BR/installer.xml
+++ b/locale/pt_BR/installer.xml
@@ -15,44 +15,44 @@
 <locale name="pt_BR" full_name = "Português (Brasil)">
 	<message key="installer.additionalLocales">Idiomas Adicionais</message>
 	<message key="installer.administratorAccount">Conta de Administrador</message>
-	<message key="installer.administratorAccountInstructions">Este usuário será o Administrador do Portal e terá acesso completo ao sistema. Contas adicionais podem ser criados após a instalação.</message>
-	<message key="installer.checkNo"><![CDATA[<span class=]]></message>
+	<message key="installer.administratorAccountInstructions">Este usuário será o Administrador do Portal e terá acesso completo ao sistema. Contas adicionais podem ser criadas após a instalação.</message>
+	<message key="installer.checkNo"><![CDATA[<span class="formError">NÃO</span>]]></message>
 	<message key="installer.checkYes">Sim</message>
 	<message key="installer.clientCharset">Conjunto de caracteres do Cliente</message>
 	<message key="installer.clientCharsetInstructions">A codificação utilizada para dados enviados e recebidos pelos navegadores.</message>
 	<message key="installer.configFileError"><![CDATA[O documento de configuração <tt>config.inc.php</tt> não existe ou não possui permissão de leitura.]]></message>
 	<message key="installer.connectionCharset">Conjunto de Caracteres da Conexão</message>
 	<message key="installer.connectionCharsetInstructions"><![CDATA[A codificação utilizada para dados enviados e recebidos pela base de dados. Deve ser o mesmo do Cliente. Note que esta opção é suportada somente em bases MySQL >= 4.1.1 ou PostgreSQL >= 7.1. Escolha "Não disponível" caso a base de dados não atenda aos requisitos.]]></message>
-	<message key="installer.contentsOfConfigFile">Conteúdo para documento de configuração</message>
-	<message key="installer.createDatabase">Criar novo banco de dados</message>
-	<message key="installer.createDatabaseInstructions">Para utilizar esta opção o servidor de bases de dados deve permitir criação de bancos remotamente e o nome de usuário e senha deve possuir as permissões necessárias para criação de bancos e tabelas. Caso ocorra um erro durante a instalação, crie manualmente o banco de dados no servidor e execute novamente o instalador desabilitando esta opção.</message>
+	<message key="installer.contentsOfConfigFile">Conteúdo para arquivo de configuração</message>
+	<message key="installer.createDatabase">Criar nova base de dados</message>
+	<message key="installer.createDatabaseInstructions">Para utilizar esta opção o servidor de bases de dados deve permitir criação de bases remotamente e o nome de usuário e senha deve possuir as permissões necessárias para criação de bases e tabelas. Caso ocorra um erro durante a instalação, crie manualmente a base de dados no servidor e execute novamente o instalador desabilitando esta opção.</message>
 	<message key="installer.databaseCharset">Conjunto de Caracteres da Base de Dados</message>
-	<message key="installer.databaseCharsetInstructions"><![CDATA[Conjunto de Caracteres para armazenamento de dados no banco. Note que esta funcionalidade é suportada somente em MySQL >= 4.1.1 ou PostgreSQL >= 7.1. Escolha "Não disponível" caso o servidor de bases de dados não atenda aos requisitos.]]></message>
+	<message key="installer.databaseCharsetInstructions"><![CDATA[Conjunto de Caracteres para armazenamento de dados na base. Note que esta funcionalidade é suportada somente em MySQL >= 4.1.1 ou PostgreSQL >= 7.1. Escolha "Não disponível" caso o servidor de bases de dados não atenda aos requisitos.]]></message>
 	<message key="installer.databaseDriver">Driver da Base de Dados</message>
-	<message key="installer.databaseDriverInstructions"><![CDATA[<strong>Drivers de bancos de dados relacionados entre chaves ([]) não tiveram suas extensões PHP reconhecidas pelo sistema, e portanto não devem funcionar.</strong><br />Os drivers listados acima somente poderão ser utilizados pelo sistema se tiveram suas extensões PHP prévia e corretamente instaladas no servidor.]]></message>
+	<message key="installer.databaseDriverInstructions"><![CDATA[<strong>Drivers de bases de dados relacionados entre chaves ([]) não tiveram suas extensões PHP reconhecidas pelo sistema, e portanto não devem funcionar.</strong><br />Os drivers não suportados, listados acima, são exibidos apenas em caráter acadêmico e experimental, não devendo funcionar por padrão. Somente poderão ser utilizados pelo sistema os drivers que tiverem suas extensões PHP prévia e corretamente instaladas no servidor.]]></message>
 	<message key="installer.databaseHost">Servidor</message>
 	<message key="installer.databaseHostInstructions">Deixe o nome do servidor em branco para conectar através de socket de domínio em vez de TCP/IP. Não é necessário para o MySQL, que automaticamente utiliza sockets caso "localhost" seja digitado, porém é obrigatório para outras bases como o PostgreSQL.</message>
 	<message key="installer.databaseName">Nome da Base de Dados</message>
-	<message key="installer.databasePassword">Senha</message>
+	<message key="installer.databasePassword">Senha para acesso à base de dados</message>
 	<message key="installer.databaseSettings">Configurações de Bases de Dados</message>
-	<message key="installer.databaseUsername">Nome de Usuário</message>
+	<message key="installer.databaseUsername">Usuário da base de dados</message>
 	<message key="installer.encryptionInstructions"><![CDATA[SHA1 é recomendado caso o sistema suporte (requer PHP >= 4.3.0).]]></message>
-	<message key="installer.encryption">Algoritmo de Critografia de Senha</message>
-	<message key="installer.filesDir">Diretório para Submissão de Documentos</message>
-	<message key="installer.fileSettings">Configurações de Documentos</message>
+	<message key="installer.encryption">Algoritmo de criptografia de senha</message>
+	<message key="installer.filesDir">Diretório para Envio de Arquivos</message>
+	<message key="installer.fileSettings">Configurações de Arquivos</message>
 	<message key="installer.form.clientCharsetRequired">Um conjunto de caracteres do cliente deve ser definido.</message>
-	<message key="installer.form.databaseDriverRequired">Driver de base de dados obrigatório.</message>
-	<message key="installer.form.databaseNameRequired">Nome do banco de dados obrigatório.</message>
-	<message key="installer.form.emailRequired">Endereço de e-mail válido obrigatório.</message>
-	<message key="installer.form.encryptionRequired">Algoritmo de criptografia de senha obrigatório.</message>
-	<message key="installer.form.filesDirRequired">Diretório para submissão de documentos obrigatório.</message>
+	<message key="installer.form.databaseDriverRequired">O driver de base de dados é obrigatório.</message>
+	<message key="installer.form.databaseNameRequired">O nome da base de dados é obrigatório.</message>
+	<message key="installer.form.emailRequired">Um endereço de e-mail válido é obrigatório.</message>
+	<message key="installer.form.encryptionRequired">O algoritmo de criptografia de senha é obrigatório.</message>
+	<message key="installer.form.filesDirRequired">O diretório para envio de arquivos é obrigatório.</message>
 	<message key="installer.form.localeRequired">Um idioma deve ser definido.</message>
 	<message key="installer.form.passwordRequired">Senha obrigatória.</message>
 	<message key="installer.form.passwordsDoNotMatch">Senhas informadas não combinam.</message>
 	<message key="installer.form.separateMultiple">Separe valores múltiplos com vírgulas</message>
 	<message key="installer.form.usernameAlphaNumeric">O login pode conter apenas caracteres alfanuméricos, sublinhados "_" e hífens "-", devendo começar e terminar por um caractere alfanumérico.</message>
 	<message key="installer.form.usernameRequired">Login obrigatório.</message>
-	<message key="installer.installationWrongPhp"><![CDATA[<br/><strong>AVISO: A versão do PHP utilizada não está em conformidade com os requisitos mínimos para instalação do sistema. Recomenda-se atualizar para uma versão mais atual do PHP.</strong>]]></message>
+	<message key="installer.installationWrongPhp"><![CDATA[<br/><strong>AVISO: A versão do PHP utilizada não está em conformidade com os requisitos mínimos para instalação do sistema. Recomenda-se usar a versão mais recente do PHP.</strong>]]></message>
 	<message key="installer.installErrorsOccurred">Ocorreram erros durante a instalação</message>
 	<message key="installer.installerSQLStatements">Comandos SQL para instalação</message>
 	<message key="installer.installFileError"><![CDATA[O documento de instalação <tt>dbscripts/xml/install.xml</tt> não existe ou não possui permissão de leitura.]]></message>
@@ -68,5 +68,7 @@
 	<message key="installer.publicFilesDirError">O diretório de documentos públicos não existe ou não possui permissão de escrita.</message>
 	<message key="installer.releaseNotes">Notas de Lançamento</message>
 	<message key="installer.securitySettings">Configurações de Segurança</message>
-	<message key="installer.skipFilesDir">Não criar sub-diretórios (útil apenas para instalação manual)</message>
+	<message key="installer.skipFilesDir">Não criar subdiretórios (útil apenas para instalação manual)</message>
+	<message key="installer.installParseEmailTemplatesFileError"><![CDATA[Erro ao tentar analisar o arquvo de e-mail padrão <tt>{$file}</tt>.]]></message>
+	<message key="installer.locale.maybeIncomplete">Traduções marcadas podem estar incompletas.</message>
 </locale>
